--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,6 @@ block content
         div.category
           img(src=category.img_src)
           p=category.name
+    a(href='/category/create' title="Create new category")
+      div#category-plus.category
+        img(src='/plus.svg')
