--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -16,4 +16,6 @@ block content
     for item in items
       a.item(href=item.url)
         p=item.name
+    a#item-plus(href='/item/create')
+      img(src='/plus.svg')
 
